--- a/src/main/resources/META-INF/resources/login.xhtml
+++ b/src/main/resources/META-INF/resources/login.xhtml
@@ -18,7 +18,7 @@
         <div class="flex align-items-center justify-content-center">
             <div class="surface-card p-4 shadow-2 border-round w-full lg:w-3 md:w-7">
                 <div class="text-center mb-5">
-                    <div class="text-900 text-3xl font-medium mb-3">Bienvenido</div>
+                    <div class="text-900 text-3xl font-medium mb-3 ">Control de Precios</div>
                 </div>
 
                 <div>
@@ -27,9 +27,7 @@
                         <p:inputText id="username" styleClass="w-full mb-3" placeholder="Usuario"/>
                         <label for="password" class="block text-900 font-medium mb-2">Clave</label>
                         <p:password id="password" styleClass="w-full mb-3" placeholder="Clave"/>
-
-                        <p:commandButton id="submit" value="Login" ajax="false"
-                                         icon="pi pi-user" styleClass="w-full"/>
+                        <p:commandButton id="submit" value="Login" ajax="false" icon="pi pi-user" styleClass="rounded-button ui-button-info w-full"/>
                     </h:form>
                 </div>
             </div>
