--- a/src/main/resources/META-INF/resources/pages/home.xhtml
+++ b/src/main/resources/META-INF/resources/pages/home.xhtml
@@ -20,7 +20,7 @@
                     <div class="flex flex-column gap-2">
                         <div class="flex align-items-center gap-2">
                             <h1 class="m-0 font-semibold text-900 text-xl line-height-3">
-                                Bienvenido
+                                Bienvenido #{loginMB.username}
                             </h1>
                         </div>
                         <p class="mb-0 mt-0 text-base text-600">
